[package]
name = "tokio_gen_server"
version = "0.1.0"
edition = "2021"
authors = ["Steven Hé (Sīchàng) <stevensichanghe@gmail.com>"]
description = "Elixir/Erlang-GenServer-like actor on the Tokio runtime."
license = "MIT"
readme = "README.md"
repository = "https://github.com/SichangHe/tokio_gen_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
